--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-
-<body>
+<body class="bg-light">
   <app-root></app-root>
 </body>
 
