deployed on azure via circleci

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 			rel="stylesheet" />
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 	</head>
-	<body class="bg-light">
+	<body class="mat-typography bg-light">
 		<app-root></app-root>
 	</body>
 </html>
